[gd_scene load_steps=4 format=2]

[ext_resource path="res://TestingGroove/PlatformMover.gd" type="Script" id=1]
[ext_resource path="res://Scenes/platform.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 142.629 )

[node name="TestingJoints2" type="Node2D"]
script = ExtResource( 1 )

[node name="platform1" parent="." instance=ExtResource( 2 )]
position = Vector2( 250.014, 65.262 )
rotation = -0.487232
initial_speed = 0
acceleration = Vector2( 0, 0 )

[node name="platform2" parent="." instance=ExtResource( 2 )]
position = Vector2( 318.978, 411.839 )
initial_speed = 0
acceleration = Vector2( 0, 0 )

[node name="Rope" type="RigidBody2D" parent="."]
gravity_scale = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rope"]
position = Vector2( 273.9, 260.56 )
shape = SubResource( 1 )

[node name="PinJoint2D1" type="PinJoint2D" parent="."]
position = Vector2( 272.615, 126.508 )
node_a = NodePath("../platform1")
node_b = NodePath("../Rope")

[node name="PinJoint2D2" type="PinJoint2D" parent="."]
position = Vector2( 275.464, 393.58 )
node_a = NodePath("../platform2")
node_b = NodePath("../Rope")
